# timberline

./: .gitignore  .lumberjack.toml  .timberline.toml  Makefile  README.md  pyproject.toml
lumberjack/: __main__.py  agent.py  cli.py  config.py  display.py  env.py  git.py  init_deps.py  names.py  shell.py  state.py  types.py  worktree.py
tests/: conftest.py  test_agent.py  test_checkout_mode.py  test_cli.py  test_config.py  test_display.py  test_env.py  test_git.py  test_init_deps.py  test_models.py  test_names.py  test_shell.py  test_state.py  test_submodules.py  test_types.py  test_worktree.py
timberline/: __main__.py  agent.py  cli.py  config.py  display.py  env.py  git.py  init_deps.py  models.py  names.py  shell.py  state.py  submodules.py  worktree.py
