[project]
name = "timberline"
version = "0.1.9"
description = "Git worktree manager for parallel coding agent development"
readme = "README.md"
license = "MIT"
authors = [{ name = "Nik Cubrilovic", email = "git@nikcub.me" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomlkit>=0.13",
    "humanize>=4.0",
]

[project.scripts]
tl = "timberline.cli:app"
timberline = "timberline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timberline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
    "basedpyright>=1.20",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportCallIssue = "warning"
